# 0.00.44 (46188) Nov 15, 2010
11/15/10 use Wire.getShape in WireShapeFactory, so that we're displaying the same shapes used in the voltage model
11/15/10 use CAP_BUTT for wire strokes, adjust battery terminal connection points
11/15/10 put all dev stuff in new developer package
11/15/10 indicate color of shape strokes by setting foreground of developer menu items
11/15/10 enable/disable shape debug via developer menu items
11/15/10 remove portion of bottom wire that is occluded by battery
11/15/10 add battery terminal offsets to shape model, for more precise wire connections
11/15/10 more precise model of positive battery terminal
11/15/10 remove transparency feature from plates, they are always opaque
11/15/10 remove dielectric transparency for voltmeter
# 0.00.43 (46138) Nov 15, 2010
11/15/10 dev version to demo measurement of voltage and E-field in 2D projection of 3D scene
11/15/10 make E-field detector measure points in the 2D projection of space between the capacitor plates
11/15/10 debug CapacitorShapeFactory methods used by E-field Detector
11/15/10 clean up CapacitorShapeFactory, add methods needed for E-field Detector
11/15/10 add ShapeUtils.add and subtract
11/15/10 remove Point3D from BoxShapeFactory interface
11/15/10 subtract portion of bottom wire occluded by bottom plate
11/15/10 refinements in CapacitorShapeFactory
11/12/10 shape of bottom wire subtracts dielectric and top plate shapes (bottom plate is OK)
11/12/10 implement Capacitor.topPlateIntersects(Shape) and bottomPlateIntersects(Shape), voltmeter probes can now touch the plates
11/12/10 implement shape factory for capacitor, handle object occlusion via shape subtraction
11/12/10 move code for box shapes into BoxShapeFactory, use in BoxNode
11/12/10 remove MVT.modelToModel(Point3D), no longer needed since all Shape creation is in view coordinate frame